<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!--Background image-->
    <View
        android:id="@+id/register_login_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/login_background" />

    <!--Blur effect for background-->
    <View
        android:id="@+id/register_login_blur"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.5"
        android:background="#000000" />

    <!--Guidelines for edges 15%-->
    <android.support.constraint.Guideline
        android:id="@+id/register_logo_left_edge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.15" />

    <android.support.constraint.Guideline
        android:id="@+id/register_logo_right_edge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.85" />

    <android.support.constraint.Guideline
        android:id="@+id/register_back_button_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.05" />

    <android.support.constraint.Guideline
        android:id="@+id/register_logo_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.15" />

    <TextView
        android:id="@+id/register_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/app_name"
        android:textAppearance="@style/logo_text"

        app:layout_constraintBottom_toBottomOf="@+id/register_logo_guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/register_logo_guideline" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/register_email_edit_text_layout"
        style="@style/normal_hint"

        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:hint="@string/email_address"

        app:errorEnabled="true"
        app:layout_constraintBottom_toTopOf="@+id/register_password_edit_text_layout"
        app:layout_constraintEnd_toEndOf="@id/register_logo_right_edge"

        app:layout_constraintStart_toStartOf="@id/register_logo_left_edge">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/register_email_edit_text"
            style="@style/normal_hint"

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textEmailAddress" />
    </android.support.design.widget.TextInputLayout>

    <android.support.constraint.Guideline
        android:id="@+id/register_inputs_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.4" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/register_password_edit_text_layout"
        style="@style/normal_hint"
        android:layout_width="0dp"

        android:layout_height="wrap_content"
        android:hint="@string/password"
        app:errorEnabled="true"

        app:layout_constraintBottom_toBottomOf="@+id/register_inputs_guideline"
        app:layout_constraintEnd_toEndOf="@id/register_logo_right_edge"
        app:layout_constraintStart_toStartOf="@id/register_logo_left_edge"
        app:layout_constraintTop_toTopOf="@+id/register_inputs_guideline">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/register_password_edit_text"
            style="@style/normal_hint"

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPassword" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/register_repeat_password_edit_text_layout"
        style="@style/normal_hint"
        android:layout_width="0dp"

        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/password_repeat"

        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="@id/register_logo_right_edge"
        app:layout_constraintStart_toStartOf="@id/register_logo_left_edge"

        app:layout_constraintTop_toBottomOf="@+id/register_password_edit_text_layout">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/register_repeat_password_edit_text"
            style="@style/normal_hint"

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPassword" />
    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:id="@+id/register_terms_of_service_linear_layout"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toBottomOf="@+id/register_last_guideline"
        app:layout_constraintEnd_toEndOf="@id/register_logo_right_edge"
        app:layout_constraintStart_toStartOf="@id/register_logo_left_edge">

        <Button
            android:id="@+id/back_button"

            android:text="GO BACC"

            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="5" />

        <TextView
            style="@style/normal_text"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="5"

            android:gravity="center_vertical|end"
            android:text="@string/terms_of_service_first_text" />

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.03" />

        <TextView
            android:id="@+id/register_terms_of_service_text_link"
            style="@style/text_link"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.6"

            android:gravity="center_vertical"
            android:text="@string/terms_of_service_second_text" />

        <CheckBox
            android:id="@+id/register_terms_of_service_checkbox"

            android:layout_width="0dp"
            android:layout_height="match_parent"

            android:layout_weight="0.5"
            android:buttonTint="#FFFFFF" />
    </LinearLayout>

    <android.support.constraint.Guideline
        android:id="@+id/register_last_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.85" />

    <Button
        android:id="@+id/register_register_button"
        style="@style/normal_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:layout_marginTop="20dp"
        android:background="#ff5030"

        android:text="@string/register_button_text"
        app:layout_constraintEnd_toEndOf="@id/register_logo_right_edge"
        app:layout_constraintStart_toStartOf="@id/register_logo_left_edge"

        app:layout_constraintTop_toTopOf="@+id/register_last_guideline" />

</android.support.constraint.ConstraintLayout>